--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,3 +26,6 @@ Style/FrozenStringLiteralComment:
 Style/GuardClause:
   Exclude:
     - 'lib/intacct/models/**/*'
+
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
