Add native attr lists for sub item custom field formatting

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,18 @@ Layout/MultilineArrayLineBreaks:
 Lint/ShadowingOuterLocalVariable:
   Enabled: false
 
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/ClassLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/ModuleLength:
+  Enabled: false
+
 Style/Documentation:
   Enabled: false
 
