--- a/.github/workflows/rspec.yaml
+++ b/.github/workflows/rspec.yaml
@@ -23,8 +23,8 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          gem install bundler
-          bundle install
+          gem install bundler:2.4.14
+          bundle _2.4.14_ install
 
       - name: Run tests
         env:
